--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,35 @@
 	flex-direction: column;
 	justify-content: center;
 	row-gap: 1rem;
-	padding: 1rem;
+	padding: 1.3rem;
 	margin-bottom: 2rem;
 }
 
 .card__img {
 	width: 100%;
+	position: relative;
+}
+
+.card__view {
+	cursor: pointer;
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 99%;
+	background-color: rgba(0, 255, 255, 0.5);
+	border-radius: 1rem;
+	z-index: 1;
+}
+
+.view {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.card__img:hover .card__view {
+	display: block;
 }
 
 .img {
@@ -62,14 +85,16 @@
 	font-size: 1.5rem;
 	font-weight: bold;
 	color: var(--White);
+	font-weight: 600;
 }
 
 .card__paragraph {
 	font-size: 18px;
+	font-weight: 400;
 }
 
 .card__data {
-  margin-top: .5rem;
+	margin-top: 0.5rem;
 	display: flex;
 	justify-content: space-between;
 	padding-bottom: 1.5rem;
@@ -92,6 +117,8 @@
 	align-items: center;
 	column-gap: 1rem;
 	color: var(--Soft_blue);
+	font-weight: 300;
+	margin-bottom: 0.5rem;
 }
 
 .img-profile {
@@ -104,6 +131,13 @@
 
 .name {
 	color: var(--White);
+}
+
+/* Activated State */
+.name:hover,
+.card__title:hover {
+	cursor: pointer;
+	color: var(--Cyan);
 }
 
 /* #region Attribution*/
